Fix weird links on mobile

--- a/rehome/assets/scss/main.scss
+++ b/rehome/assets/scss/main.scss
@@ -40,7 +40,7 @@ a {
     text-decoration: none;
     color: var(--primary-color);
 
-    &:visited {
+    &:visited, &:link {
         color: var(--primary-color);
     }
 
